# kaggle-competitions

./: backpack-prediction.ipynb  flight-delay-classification.ipynb  iris-classifier.ipynb  pyproject.toml
backpack-prediction/: backpack-prediction.ipynb
dataset/housing-prices-competition/: submission.csv
dataset/spaceship-titanic/: submission.csv
dataset/titanic-machine-learning-from-disaster/: submission.csv
housing-prices-competition/: main.ipynb
iris-classifier/: iris-classifier.ipynb
spaceship-titanic/: main.ipynb
titanic-machine-learning-from-disaster/: main.ipynb
