[project]
name = "kaggle-competitions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black[jupyter]>=25.1.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=2.1.4",
]
